# SAD

./: .gitignore  LICENSE
2023.2/FTOPSIS-Class/: README.md
2023.2/PDTOPSIS-Sort/: README.md
2023.2/PROMETHEE/: README.md  functions.py  main.py
2023.2/PROMETHEE-ROC/: README.md  setup.py
2023.2/TOPSIS-Sort/: README.md
2023.2/TOPSIS-Sort-B/: README.md
2023.2/TOPSIS-Sort-B/src/: Readme.md
2023.2/β-PROMETHEE/: README.md
2024.2/FTOPSIS-Class/: .gitignore  README.md  main.py  main2.py  main_trapezoidal.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  trapezoidal.json
2024.2/FTOPSIS-Class/core/: trapezoidal_core.py  triangular_core.py
2024.2/FTOPSIS-Class/ftopsis_class/: core.py  trapezoidal_core.py
2024.2/FTOPSIS-Class/utils/: constants.py  invert_matrix.py
2024.2/Fuzzy-TOPSIS/: ReadMe.md  main.py
2024.2/RIM/: README.md  main.py  setup.py
2024.2/RIM/rim_biblioteca/: rim.py
2024.2/TOPSIS/: main.py  readme.md
2024.2/W-FRIM/: README.md  main.py  utils.py
2026.1/RIM/: .gitignore  README.md  dev.sh
2026.1/TOPSIS/: .gitignore  README.md  render.yaml
2026.1/TOPSIS/backend/: .gitignore  pyproject.toml  railway.json
2026.1/TOPSIS/backend/app/: main.py  schemas.py  topsis.py
2026.1/TOPSIS/backend/app/services/: __init__.py  pca_service.py
2026.1/TOPSIS/backend/tests/: test_api.py  test_topsis.py
2026.1/VIKOR/: README.md
FTOPSIS-CLASS/: requirements.txt
RIM/tests/: test_rim.py
SAD-LIBRARY/: requirements.txt
TOPSIS/: requirements.txt
VIKOR/tests/: test_decision.py  test_models.py  test_utils.py  test_vikor.py
(+141 files in other folders)
